# soccerbot

./: .gitignore  .gitmodules  AGENTS.md  CNAME  HANDOVER.md  README.md  act_log_20260718_192407.csv  act_log_20260718_205519.csv  act_log_20260718_205724.csv  act_log_20260718_224646.csv  act_log_20260718_224824.csv  act_log_20260719_093127.csv  act_log_20260719_093852.csv  act_log_20260719_094946.csv  act_log_20260719_095108.csv  act_log_20260719_095133.csv  act_log_20260719_095316.csv  act_log_20260719_095448.csv  act_log_20260719_095612.csv  act_log_20260719_095757.csv  act_log_20260719_095924.csv  act_log_20260719_100055.csv  act_log_20260719_100654.csv  act_log_20260719_111126.csv  act_log_20260719_112437.csv  act_log_20260719_113927.csv  diagnose.sh  how_to_run.md  index.html  install.sh  killswitch.sh  pyproject.toml  run_soccerbot.sh  script.js  styles.css
data-pipeline/: README.md  catalog.py  export_lerobot.py  ingest_episodes.py  pyproject.toml  view_recordings.py
datasets/lerobot_dummy_1episode/: README.md
datasets/lerobot_dummy_1episode/data/chunk-000/: episode_000000.parquet
datasets/lerobot_dummy_1episode/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
local-vla-inference/: README.md  dds_init.py  diag_health.py  diag_joints.py  diag_state.py  embodiment_g1_14d.py  embodiment_g1d_16d.py  front_camera.py  g1_29_fk.py  g1_arms.py  install.sh  main.py  pyproject.toml  record_arms.py  replay_arms.py  run.sh  run_viz.sh  telemetry.py
realsense-human-detection/: README.md  install.sh  main.py  pyproject.toml  realsense_human_avoid.py  testwebcam.py
realsense-human-detection/scripts/: build_librealsense.py
realsense-human-detection/src/realsense_human_detection/: __init__.py  depth.py  detect.py  guidance.py  live.py
realsense-human-detection/tests/: test_detect.py
remote-vla-inference/: HANDOFF.md  README.md  g1_client.py  g1_dds_robot.py  policy_server.py  pyproject.toml  run_client.sh  run_server.sh  smoke_pi05_client.py
scripted-behavior/: README.md  act_log_20260718_214425.csv  act_log_20260718_214602.csv  act_log_20260718_214731.csv  act_log_20260718_214950.csv  act_log_20260719_083911.csv  act_log_20260719_084301.csv  act_log_20260719_101050.csv  act_log_20260719_101752.csv  act_log_20260719_101941.csv  act_log_20260719_102144.csv  act_log_20260719_102532.csv  act_log_20260719_102922.csv  act_log_20260719_104133.csv  act_log_20260719_104328.csv  act_log_20260719_104619.csv  act_log_20260719_104742.csv  act_log_20260719_105012.csv  act_log_20260719_105706.csv  act_log_20260719_105934.csv  act_log_20260719_110220.csv  act_log_20260719_111524.csv  act_log_20260719_111831.csv  act_log_20260719_112534.csv  act_log_20260719_112912.csv  act_log_20260719_113117.csv  act_log_20260719_113550.csv  act_log_20260719_114041.csv  act_log_20260719_120138.csv  arm_replay.py  avoid.py  config.py  dds.py  diag_loco.py  diag_log.py  g1_arm_fk.py  home_pose.json  human_detector_teleimager.py  main.py  pickup.py  (+6 more)
scripted-behavior/logs/: before_replay.csv  during_replay.csv
scripted-behavior/trajectories/: pickup_ep10.json  pickup_ep148_prod2.json  throw_recorded.json
sim/: __init__.py  find_imports.py  find_world.py  pyproject.toml  run_demo.py  scene.py  sim_arms.py  sim_detect.py  sim_loco.py
soccerbot/: README.md  pyproject.toml
soccerbot/src/soccerbot/: __init__.py  __main__.py  config.py  deps.py  home.py  killswitch.py  main.py  orchestrator_runner.py  pickup.py  safety.py
soccerbot/tests/: test_api.py
training/: embodiment_g1.py  embodiment_g1_revo2.py  main.py  pyproject.toml  test_main.py
ui/: README.md  nuxt.config.ts  package-lock.json  package.json
ui/app/: app.vue
vla-inference/: pyproject.toml
