[project]
name = "soccerbot-workspace"
version = "0.1.0"
description = "Soccerbot workspace"
# Allow 3.12 for unitree/cyclonedds on the robot; prefer `uv sync -p 3.12` there.
# Dev/cloud can still use 3.13 when not importing unitree_sdk2py.
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "training",
    "thirdparty/lerobot",
    "soccerbot",
    "local-vla-inference",
    "scripted-behavior",
]

[tool.uv]
package = false
