[project]
name = "local-vla-inference"
version = "0.1.0"
description = "ACT inference on Unitree G1D (arms only)"
readme = "README.md"
# cyclonedds 0.10.2 (unitree_sdk2py) needs Python <3.13. Sync the repo root with 3.12.
requires-python = ">=3.12"
dependencies = [
    "lerobot",
    "pyzmq>=26.0.0",
    "unitree_sdk2py @ git+https://github.com/unitreerobotics/unitree_sdk2_python.git",
]

[tool.uv.sources]
lerobot = { workspace = true }

[tool.uv]
extra-build-dependencies = { cyclonedds = ["setuptools", "wheel"] }
