[project]
name = "local-vla-inference"
version = "0.1.0"
description = "ACT inference on Unitree G1D (arms only)"
readme = "README.md"
# cyclonedds 0.10.2 (unitree_sdk2py) needs Python <3.13. Sync the repo root with 3.12.
requires-python = ">=3.12"
dependencies = [
    "lerobot[viz]",
    "pyzmq>=26.0.0",
    "unitree_sdk2py @ git+https://github.com/unitreerobotics/unitree_sdk2_python.git",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "g1_arms",
    "front_camera",
    "telemetry",
    "embodiment_g1_14d",
    "embodiment_g1d_16d",
    "diag_health",
    "diag_joints",
    "diag_state",
    "record_arms",
    "replay_arms",
]

[tool.uv.sources]
lerobot = { workspace = true }

[tool.uv.extra-build-dependencies]
cyclonedds = ["setuptools", "wheel"]
