[project]
name = "scripted-behavior"
version = "0.1.0"
description = "Hardcoded (non-learned) post-pickup state machine: turn, human-detect, shuffle, throw"
readme = "README.md"
requires-python = ">=3.12"
# unitree_sdk2py / cyclonedds 0.10.2 need Python 3.12 — install on the robot via
# ./install.sh (or local-vla-inference/install.sh), not a 3.13-only sync.
# Logic imports sibling local-vla-inference via sys.path (see arm_replay / throw);
# keep this package free of a hard install dep so throw dry-run stays lightweight.
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "config",
    "dds",
    "pickup",
    "turn_180",
    "sidestep",
    "avoid",
    "throw",
    "arm_replay",
    "g1_arm_fk",
    "human_detector_teleimager",
    "diag_loco",
    "diag_log",
    "test_throw",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
