[project]
name = "soccerbot-sim"
version = "0.1.0"
description = "Isaac Sim integration for scripted-behavior demo"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Project lives in sim/ with modules at the package root; expose as import `sim`.
[tool.setuptools]
packages = ["sim"]

[tool.setuptools.package-dir]
sim = "."
