[project]
name = "soccerbot-sim"
version = "0.1.0"
description = "Isaac Sim integration for scripted-behavior demo"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Flat package layout (modules live next to this pyproject, not under src/).
[tool.hatch.build.targets.wheel]
packages = ["."]
