[project]
name = "soccerbot"
version = "0.1.0"
description = "FastAPI control plane for the G1 soccer-ball demo orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]

[project.scripts]
soccerbot-api = "soccerbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soccerbot"]
